--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server": "node server.js",
     "server:dev": "nodemon server.js",
     "start": "concurrently \"npm run server\" \"npm run dev\"",
-    "start:dev": "concurrently \"npm run server:dev\" \"npm run dev\""
+    "start:dev": "concurrently \"npm run server:dev\" \"npm run dev\"",
+    "restart": "pkill -f 'node server.js' || true && pkill -f 'vite' || true && npm run start:dev"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
